<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical"
    tools:context=".viewPosts.MainActivity"
    tools:showIn="@layout/activity_main">

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recyclerView_id" />

    <com.jetradar.desertplaceholder.DesertPlaceholder
        android:id="@+id/nothing_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:dp_buttonText="retry"
        app:dp_message="No posts available.."/>

</LinearLayout>